--- a/less/style.less
+++ b/less/style.less
@@ -5,23 +5,14 @@ html {
 }
 
 body {
-	@media (min-width: 979px)
-	{
-		padding-top: 12rem;
-	}
-
-	@media (max-width: 979px)
-	{
-		padding-top: 12rem;
-		padding-bottom: 3rem;
-	}
-
+	padding-top: 12rem;
+	padding-bottom: 3rem;
 	background-color: #00003F;
 }
 
 #flair {
 	position: fixed;
-	top: 0px;
+	top: 0;
 	width: 100%;
 	height: 12rem;
 	background: darkblue none repeat scroll 0% 0%;
@@ -121,7 +112,6 @@ a:hover, .btn-link:hover, .btn-link:active, .btn-link:focus {
 		color: @gray;
 	}
 }
-
 
 .topic .topic-item, .category .category-item {
 	-webkit-transition: background-color 500ms linear;
@@ -228,7 +218,6 @@ a:hover, .btn-link:hover, .btn-link:active, .btn-link:focus {
 		white-space: pre-line;
 	}
 }
-
 
 .footer {
 	margin-top: 1em;
