--- a/less/style.less
+++ b/less/style.less
@@ -22,6 +22,27 @@ body {
 	font-size: 2em;
 }
 
+.navbones-fixed {
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+}
+
+#navbones-container {
+	position: relative;
+}
+
+#navbones-bones {
+	height: 50px;
+	top: -40px;
+	z-index: 1;
+	transition: top 1s cubic-bezier(1, 0, 0, 1) 0s;
+	position: absolute;
+	background: white none repeat scroll 0% 0%;
+	width: 100%;
+}
+
 #nav {
 	margin-bottom: -3.2rem;
 	height: 3.2rem;
